[gd_scene load_steps=6 format=3 uid="uid://c0rmcmw8a4ke3"]

[ext_resource type="Script" path="res://KCards/scenes/menu/difficulty_mode_menu.gd" id="1_dga8j"]
[ext_resource type="Texture2D" uid="uid://dap7i3bphd2hu" path="res://KCards/images/bg_buttons_picture/unlock_button.png" id="2_y2xm6"]
[ext_resource type="Texture2D" uid="uid://kam5g042pbtj" path="res://KCards/images/bg_buttons_picture/k-temn.png" id="3_m3mep"]
[ext_resource type="Texture2D" uid="uid://5b5ekie1feik" path="res://KCards/images/bg_buttons_picture/unlock_button_light.png" id="4_oraur"]
[ext_resource type="Texture2D" uid="uid://dkqp1aemjln4s" path="res://KCards/images/bg_buttons_picture/lock_button.png" id="4_qxwse"]

[node name="difficulty_mode_menu" type="Node2D"]
script = ExtResource("1_dga8j")

[node name="EasyModeButton" type="TextureButton" parent="."]
offset_left = 63.0
offset_top = 85.0
offset_right = 273.0
offset_bottom = 155.0
texture_normal = ExtResource("2_y2xm6")
texture_pressed = ExtResource("3_m3mep")
texture_hover = ExtResource("4_oraur")

[node name="Label" type="Label" parent="EasyModeButton"]
layout_mode = 0
offset_left = 13.0
offset_top = 12.0
offset_right = 196.0
offset_bottom = 52.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 27
text = "Легкий"
horizontal_alignment = 1

[node name="NormalModeButton" type="TextureButton" parent="."]
offset_left = 64.0
offset_top = 168.0
offset_right = 274.0
offset_bottom = 238.0
disabled = true
texture_normal = ExtResource("2_y2xm6")
texture_pressed = ExtResource("3_m3mep")
texture_hover = ExtResource("4_oraur")
texture_disabled = ExtResource("4_qxwse")

[node name="Label" type="Label" parent="NormalModeButton"]
layout_mode = 0
offset_left = 10.0
offset_top = 13.0
offset_right = 193.0
offset_bottom = 53.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
text = "Нормальный
"
horizontal_alignment = 1

[node name="EditingDeckButton" type="TextureButton" parent="."]
offset_left = 63.0
offset_top = 254.0
offset_right = 273.0
offset_bottom = 324.0
texture_normal = ExtResource("2_y2xm6")
texture_pressed = ExtResource("3_m3mep")
texture_hover = ExtResource("4_oraur")
texture_disabled = ExtResource("4_qxwse")

[node name="Label" type="Label" parent="EditingDeckButton"]
layout_mode = 0
offset_left = 10.0
offset_top = 12.0
offset_right = 193.0
offset_bottom = 52.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 27
text = "Колода
"
horizontal_alignment = 1

[node name="BackModeButton" type="TextureButton" parent="."]
offset_left = 63.0
offset_top = 340.0
offset_right = 273.0
offset_bottom = 410.0
texture_normal = ExtResource("2_y2xm6")
texture_pressed = ExtResource("3_m3mep")
texture_hover = ExtResource("4_oraur")
texture_disabled = ExtResource("4_qxwse")

[node name="Label" type="Label" parent="BackModeButton"]
layout_mode = 0
offset_left = 14.0
offset_top = 11.0
offset_right = 197.0
offset_bottom = 51.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 27
text = "Назад
"
horizontal_alignment = 1

[connection signal="pressed" from="EasyModeButton" to="." method="_on_easy_mode_button_pressed"]
[connection signal="pressed" from="NormalModeButton" to="." method="_on_normal_mode_button_pressed"]
[connection signal="pressed" from="EditingDeckButton" to="." method="_on_editing_deck_button_pressed"]
[connection signal="pressed" from="BackModeButton" to="." method="_on_back_mode_button_pressed"]
